--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#veille">Veille</a></li>
         </ul>
     </nav>
-    <img class="image1" src="IMAGES/image_code.jpg" width="500">    
+    <img class="image1" src="image_code.jpg" width="500">    
     <div class="texte1" id="qui">
         <h1><strong>Présentation</strong></h1>
         <br>
