--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="#Accueil">Accueil</a></li>
         <li><a href="#Propos">Présentation</a></li>
         <li><a href="#cv">CV</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#veille">Veille</a></li>
         <li class="dropdown">
             <a href="#projets">Projets</a>
             <ul class="dropdown-content">
@@ -26,7 +26,7 @@
                 <li><a href="#">Projet 2</a></li>
             </ul>
         </li>
-        <li><a href="#veille">Veille</a></li>
+        <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
 <button class="scroll-to-top" id="scroll-to-top-button">
@@ -132,6 +132,18 @@
             </tr>
         </table>
     </section>
+<br>
+    <section id="contact">
+        <h2>Contact</h2>
+        <div class="contact-info">
+            <h3>Coordonnées</h3>
+            <p>Email : vito.ruggeripro@gmail.com</p>
+            <p>Téléphone : 06 27 33 66 95</p>
+            <p>Adresse : 1 rue du Content, GAP 05000</p>
+            <!-- Ajoutez d'autres informations de contact au besoin -->
+        </div>
+    </section>
+    
     <script>
         // Get the button
         var mybutton = document.getElementById("scroll-to-top-button");
