--- a/index.html
+++ b/index.html
@@ -1,84 +1,78 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio VITO RUGGERI</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<header id="Accueil">
-    <h1>Bienvenue</h1>
-    <p>Je suis Vito Ruggeri, <br> élève en BTS SIO à GAP.</p>
-</header>
-<nav id="mainNav">
-    <ul>
-        <li><a href="#Accueil">Accueil</a></li>
-        <li><a href="#Propos">Présentation</a></li>
-        <li><a href="#cv">CV</a></li>
-        <li><a href="#veille">Veille</a></li>
-        <li class="dropdown">
-            <a href="#projets">Projets</a>
-            <ul class="dropdown-content">
-                <li><a href="#projet1">Projet 1</a></li>
-                <li><a href="#">Projet 2</a></li>
-            </ul>
-        </li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
-<button class="scroll-to-top" id="scroll-to-top-button">
-    <span class="arrow">&#9650;</span>
-</button>
-<img class="image1" src="mp4.gif" width="500">
-<div class="texte1" id="Propos">
-    <h1><strong>Présentation</strong></h1>
-    <br>
-    <p>
-        <strong>Salut !</strong> <br>
+    <header id="Accueil">
+        <h1>Bienvenue</h1>
+        <p>Je suis Vito Ruggeri, <br> élève en BTS SIO à GAP.</p>
+    </header>
+    <nav id="mainNav">
+        <ul>
+            <li><a href="#Accueil">Accueil</a></li>
+            <li><a href="#Propos">Présentation</a></li>
+            <li><a href="#cv">CV</a></li>
+            <li><a href="#veille">Veille</a></li>
+            <li class="dropdown">
+                <a href="#projets">Projets</a>
+                <ul class="dropdown-content">
+                    <li><a href="#projet1">Projet 1</a></li>
+                    <li><a href="#">Projet 2</a></li>
+                </ul>
+            </li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <button class="scroll-to-top" id="scroll-to-top-button">
+        <span class="arrow">&#9650;</span>
+    </button>
+    <img class="image1" src="mp4.gif" width="500">
+    <section class="texte1 section-with-nav-offset" id="Propos">
+        <h1><strong>Présentation</strong></h1>
         <br>
-        <strong>Je suis Vito, passionné d'informatique et étudiant en BTS SIO option SLAM.<br> Je m'immerge dans l'univers numérique avec curiosité et créativité. <br>Explorez mon portfolio pour découvrir mes projets et suivre mon parcours dans le monde captivant de l'informatique.</strong> <br>
-    </p>
-    <br>
-</div>
-<br>
-<br>
-<section id="cv">
-    <h2>Mon CV</h2>
-    <br>
-
-    <!-- Informations personnelles -->
-    <div class="info">
-        <h3>Informations personnelles</h3>
+        <p>
+            <strong>Salut !</strong> <br>
+            <br>
+            <strong>Je suis Vito, passionné d'informatique et étudiant en BTS SIO option SLAM.<br> Je m'immerge dans l'univers numérique avec curiosité et créativité. <br>Explorez mon portfolio pour découvrir mes projets et suivre mon parcours dans le monde captivant de l'informatique.</strong> <br>
+        </p>
         <br>
-        <p><strong>Nom :</strong> Vito Ruggeri</p>
-        <p><strong>Date de naissance :</strong> 18/11/2005</p>
-        <p><strong>Email :</strong> vito.ruggeripro@gmail.com</p>
-        <p><strong>Téléphone :</strong> 06 27 33 66 95</p>
-        <p><strong>Adresse :</strong> 1 rue du Content, GAP 05000</p>
-    </div>
+    </section>
     <br>
     <br>
-    <br>
-    <!-- Formation -->
-    <div class="formation">
-        <h3>Formation</h3>
-        <br>
-        <p><strong>° Baccalauréat Général spécialités: NSI, Anglais et option Mathématiques Complémentaires  </strong></p>
-        <p>Lycée Maurice Janetti, 2022-2023</p>
-        <br>
-        <p><strong>° Brevet des collèges</strong></p>
-        <p>Sainte Jeanne D'Arc, 2019-2020</p>
-        <br>
-        <p><strong>° Certification Pix</strong></p>
-
-    </div>
+    <section id="cv" class="section-with-nav-offset">
+        <h2>Mon CV</h2>
+        <!-- Informations personnelles -->
+        <div class="info">
+            <h3>Informations personnelles</h3>
+            <br>
+            <p><strong>Nom :</strong> Vito Ruggeri</p>
+            <p><strong>Date de naissance :</strong> 18/11/2005</p>
+            <p><strong>Email :</strong> vito.ruggeripro@gmail.com</p>
+            <p><strong>Téléphone :</strong> 06 27 33 66 95</p>
+            <p><strong>Adresse :</strong> 1 rue du Content, GAP 05000</p>
+        </div>
         <br>
         <br>
         <br>
-
+        <!-- Formation -->
+        <div class="formation">
+            <h3>Formation</h3>
+            <br>
+            <p><strong>° Baccalauréat Général spécialités: NSI, Anglais et option Mathématiques Complémentaires  </strong></p>
+            <p>Lycée Maurice Janetti, 2022-2023</p>
+            <br>
+            <p><strong>° Brevet des collèges</strong></p>
+            <p>Sainte Jeanne D'Arc, 2019-2020</p>
+            <br>
+            <p><strong>° Certification Pix</strong></p>
+        </div>
+        <br>
+        <br>
+        <br>
         <!-- Expérience professionnelle -->
         <div class="experience">
             <h3>Expérience professionnelle</h3>
@@ -92,23 +86,21 @@
         <!-- Compétences -->
         <div class="skills">
             <h3>Compétences</h3>
-                <p>Langages de programmation : Python, Java, HTML, CSS</p>
-                <p>Bases de données : MySQL</p>
-                <!-- Ajoutez d'autres compétences au besoin -->
+            <p>Langages de programmation : Python, Java, HTML, CSS</p>
+            <p>Bases de données : MySQL</p>
+            <!-- Ajoutez d'autres compétences au besoin -->
         </div>
     </section>
-
-    <section id="projets">
+    <section id="projets" class="section-with-nav-offset">
         <h2>Projets</h2>
         <section id="projet1">
             <h3>Projet 1 : M2L: JavaFX</h3>
             <br>
         </section>
     </section>
-
     <section id="veille">
         <h2>Veille</h2>
-        <!-- Ajout du tableau de veille informatique -->
+        <!-- Tableau de veille informatique -->
         <table class="table">
             <tr>
                 <th>Date</th>
@@ -116,24 +108,20 @@
                 <th>Description</th>
             </tr>
             <tr>
-                <td>01/01/2023</td>
-                <td>Titre 1</td>
-                <td>Description 1</td>
+                <td>01/04/2024</td>
+                <td>Titre veille 1</td>
+                <td>Description veille 1</td>
             </tr>
             <tr>
-                <td>01/01/2023</td>
-                <td>Titre 2</td>
-                <td>Description 2</td>
+                <td>02/04/2024</td>
+                <td>Titre veille 2</td>
+                <td>Description veille 2</td>
             </tr>
-            <tr>
-                <td>01/01/2023</td>
-                <td>Titre 3</td>
-                <td>Description 3</td>
-            </tr>
+            <!-- Ajoutez d'autres lignes au besoin -->
         </table>
     </section>
-<br>
-    <section id="contact">
+    <br>
+    <section id="contact" class="section-with-nav-offset">
         <h2>Contact</h2>
         <div class="contact-info">
             <h3>Coordonnées</h3>
@@ -143,33 +131,27 @@
             <!-- Ajoutez d'autres informations de contact au besoin -->
         </div>
     </section>
-    
     <script>
         // Get the button
         var mybutton = document.getElementById("scroll-to-top-button");
-
         // When the user scrolls down 20px from the top of the document, show the button
         window.onscroll = function() {scrollFunction()};
-
         function scrollFunction() {
-          if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-            mybutton.style.display = "block";
-          } else {
-            mybutton.style.display = "none";
-          }
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
         }
-
         // When the user clicks on the button, scroll to the top of the document
         mybutton.onclick = function() {
-          document.body.scrollTop = 0;
-          document.documentElement.scrollTop = 0;
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
         }
-
         window.addEventListener('scroll', function() {
             var nav = document.getElementById('mainNav');
             var header = document.querySelector('header');
             var headerHeight = header.offsetHeight;
-
             if (window.scrollY > headerHeight) {
                 nav.classList.add('fixed-nav');
             } else {
@@ -181,7 +163,5 @@
         <hr>
         <p><strong>Vito RUGGERI ©</strong></p>
     </footer>
-
 </body>
-
 </html>
