--- a/index.html
+++ b/index.html
@@ -5,53 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio VITO RUGGERI</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="scripts.js"></script>
   </head>
   <body>
     <header id="Accueil">
       <div class="container" id="Welcome">
-        <h1>Bienvenue</h1>
-        <br />
+        <br>
+        <h1>Bienvenue sur mon portfolio !</h1>
+        <br>
         <div class="animated-text-container">
           <p id="animated-text"></p>
         </div>
-      </div>
+        <div class="arrow-container">
+          <img src="LOGO.png" alt="LOGO" id="logo">
+          <i class="fas fa-chevron-down arrow-down"></i>
+        </div>
     </header>
     <nav id="mainNav">
+      <img src="marseille.png" alt="Bonne Mère de Marseille" id="bonne-mere-logo">
       <ul>
         <li><a href="#Accueil">Accueil</a></li>
         <li><a href="#Propos">Présentation</a></li>
         <li><a href="#cv">CV</a></li>
         <li><a href="#veille">Veille</a></li>
-        <li class="dropdown">
-          <a href="#projets">Projets</a>
-          <ul class="dropdown-content">
-            <li><a href="#projet1">Projet 1</a></li>
-            <li><a href="#">Projet 2</a></li>
-          </ul>
-        </li>
+        <li><a href="#projets">Projets</a></li>
+        <li><a href="#calendar">Stage</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-    </nav>
-    <button class="scroll-to-top" id="scroll-to-top-button">
-      <span class="arrow">&#9650;</span>
-    </button>
+    </nav>    
     <section id="Propos" class="section section-dark">
       <div class="container1">
-        <h1><strong>Présentation</strong></h1>
-        <br />
-        <p>
-          <strong>Salut !</strong> <br /><br />
-          <strong
-            >Je suis Vito, passionné d'informatique et étudiant en BTS SIO
-            option SLAM. <br />
-            Je m'immerge dans l'univers numérique avec curiosité et créativité.
-            <br />
-            Explorez mon portfolio pour découvrir mes projets et suivre mon
-            parcours dans le monde captivant de l'informatique.</strong
-          >
-        </p>
+        <div>
+          <h1><strong>Présentation</strong></h1>
+          <br />
+          <p>
+            <strong>Salut !</strong> <br /><br />
+            <strong>
+              Je suis Vito, passionné d'informatique et étudiant en BTS SIO
+              option SLAM. <br />
+              Je m'immerge dans l'univers numérique avec curiosité et créativité.
+              <br />
+              Explorez mon portfolio pour découvrir mes projets et suivre mon
+              parcours dans le monde captivant de l'informatique.
+            </strong>
+          </p>
+        </div>
+        <img src="./mp4.gif">
       </div>
     </section>
     <section id="cv" class="section section-light">
@@ -196,6 +199,16 @@
         </table>        
       </div>
     </section>
+    <section id="calendar" class="section section-dark">
+      <div class="container">
+        <h2>Rapport de Stage</h2>
+        <h2>                         </h2>
+        <br>
+        <div id="datepicker"></div>
+        <br/>
+        <img id="screenshot" src="" alt="Capture d'écran de la journée" style="display: none; max-width: 100%; border-radius: 15px;" />
+      </div>
+    </section>    
     <section id="contact" class="section section-dark">
       <div class="container">
         <h2>Contact</h2>
