--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header id="Accueil">
-    <div class="container" id="Welcome">
+    <div class="container">
       <br>
       <h1>Bienvenue sur mon portfolio !</h1>
       <br>
