--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </section>
   <section id="veille" class="section section-light">
     <div class="container">
-      <h2>Veille</h2>
+      <h2>Veille Outils : NetNewsWire(iOS)</h2>
       <table class="table">
         <tr>
           <th>Date</th>
