--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <strong>Scoop.it</strong> : Un outil pour découvrir et partager du contenu pertinent dans des domaines spécifiques grâce à la curation.
             </li>
             <li>
-                <strong>Zotero</strong> : Une application qui collecte, organise et cite des sources de veille pour les projets de recherche et d'écriture.
+                <strong>NetNewsWire</strong> : Une application gratuite et open source pour lire les flux RSS. Elle est particulièrement appréciée sur les appareils Apple pour sa simplicité et son efficacité.
             </li>
         </ul>
     </div>
